Improvements: App plugin now with URL support. Bugfixes.

--- a/css/default/_text.scss
+++ b/css/default/_text.scss
@@ -24,6 +24,7 @@ h1 {
     font-size: 2.3em;
     text-align: center;
     margin: 0.62em 0;
+    text-transform: capitalize
 }
 
 h2 {
@@ -63,5 +64,4 @@ p {
 small {
     font-size: 75%;
 }
-
 
