--- a/examples/views/camera/camera.haml
+++ b/examples/views/camera/camera.haml
@@ -1,8 +1,8 @@
 .moo-ui-image-container
     %header
-        %a#takePicture.moo-ui-add-new{:rel=>""} Take a picture
-        %a#choosePicture.moo-ui-add-filed{:rel=>""} Choose a picture
-        %a.moo-ui-delete{:rel=>""} Delete selected
+        %a#takePicture.moo-ui-add-new Take a picture
+        %a#choosePicture.moo-ui-add-filed Choose a picture
+        %a.moo-ui-delete Delete selected
     .moo-ui-image-panel
         %ul.moo-image-list
             %li.moo-image-wrapper
