fixed minor bugs, edited comments, added spriting test

--- a/_source/css/sass/_mootor.ui.badge.scss
+++ b/_source/css/sass/_mootor.ui.badge.scss
@@ -1,6 +1,6 @@
-/*
-* Badges
-*/
+
+// Icon badges
+// ---------------------------------------------------------------------------
 
 .moo-sample-icon {
     background-color: #ccc;
@@ -20,8 +20,7 @@
         width: 24px;
         height: 24px;
         font-size: 0.5em;
-    }
-    
+    } 
 }
 
 .moo-ui-badge {
