--- a/_source/css/sass/_mootor.ui.image.scss
+++ b/_source/css/sass/_mootor.ui.image.scss
@@ -1,7 +1,6 @@
-/*
-* Overlay Image
-*/
 
+// Overlay image 
+// ---------------------------------------------------------------------------
 
 .moo-ui-image-container {
     background-color: #333;
@@ -28,7 +27,6 @@
             float: right;
             margin: 2px;
             padding: 2px 4px;
-            
         }
     }
 }
