--- a/_source/css/sass/_mootor.ui.modal.scss
+++ b/_source/css/sass/_mootor.ui.modal.scss
@@ -1,8 +1,7 @@
 
+// Overlay modal
+// ---------------------------------------------------------------------------
 
-/*
-* Overlay Modal
-*/
 .moo-ui-modal-placeholder {
     position: absolute;
     top: 50%;
