--- a/_source/css/sass/_mootor.ui.switch.scss
+++ b/_source/css/sass/_mootor.ui.switch.scss
@@ -1,5 +1,6 @@
 
-// Switch
+// Switch control
+// -----------------------------------------------------------------------------------
 
 .moo-ui-switch {
     @include background-image(linear-gradient(top, #ddd, #fff 45%));
@@ -8,10 +9,9 @@
     @include float-right;
     overflow: hidden;
     padding: 0.1em;
-    width: 9em;
     height: 2.8em;
+    width: 9em;
     b {
-        //font-size: 1.5em;
         font-weight: 700;
         line-height: 2.8em;
         text-align: center;
@@ -20,47 +20,36 @@
         height: auto;
         width: auto;
         -webkit-transform: translate3d(0, 0, 0);
-        //-webkit-transform: translate3d(6.9em, 0, 0);
         .moo-button {
             @include background-image(linear-gradient(top, #fff, #dedede));
             border: 1px solid #666;
             border-radius: 0.5em;
             display: block;
             position: relative;
-            width: 3em;
-            height: 2.8em;
             top: -0.2em;
+            height: 2.8em;
+            width: 3em;            
+        }
+        .moo-before,
+        .moo-after {
+            display: block; 
+            position: absolute;
+            top: -.1em;
+            height: 2.8em;
+            width: 6.55em;
+            &::first-letter { font-size: 1.5em;}
         }
         .moo-before { 
-            //content: "I";
-            border-radius: 0.35em 0 0 0.35em;
             background-color: rgba(66,66,66,.5);
-            color: #FFF;
-            //font-size: 1.5em;
-            font-weight: 700;
-            //line-height: 1.8em;
-            display: block;
-            width: 6.55em;
-            position: absolute;
-            top: -0.1em;
+            border-radius: 0.35em 0 0 0.35em;
+            color: #fff;
             left: -6.1em;
-            z-index: -1;
-            &::first-letter { font-size: 1.5em;}
+            z-index: -1; 
         }
         .moo-after {
-            //content: "O";
-            //background: rgba(200, 0, 0, 0.3);
             border-radius: 0 0.35em 0.35em 0;
             color: #333;
-            display: block;
-            //font-size: 1.5em;
-            //line-height: 1.8em;
-            position: absolute;
-            right: -0.3em;
-            top: 0;
-            height: 2.8em;
-            width: 6.15em;
-            &::first-letter { font-size: 1.5em;}
+            right: -.3em;
         }
     }
     &.moo-on,
@@ -69,16 +58,14 @@
             -webkit-transition-duration: .25s;    
         }
     }
-    
-    &.moo-off{
-        b {
-            -webkit-transform: translate3d(-0.15em, 0, 0);
-        }
-    }
-    &.moo-on{
+    &.moo-on {
         b {
             -webkit-transform: translate3d(5.85em, 0, 0);
         }
     }
-
+    &.moo-off {
+        b {
+            -webkit-transform: translate3d(-0.15em, 0, 0);
+        }
+    }
 }
