--- a/_source/css/sass/_mootor.ui.tooltip.scss
+++ b/_source/css/sass/_mootor.ui.tooltip.scss
@@ -1,4 +1,6 @@
-// Tooltip
+
+// Tooltip control
+// --------------------------------------------------------------------------
 .moo_tooltip {
     position: absolute;
     background: $subColor1;
