--- a/index-sprites-test.haml
+++ b/index-sprites-test.haml
@@ -25,27 +25,27 @@
         .moo-panel#nav
         
         .moo-panel#sprites
-            .moo-sample-icon
+            .moo-sample-icon.arrow
                 .moo-ui-badge
                     2
-            .moo-sample-icon
+            .moo-sample-icon.bell
                 .moo-ui-badge
                     22
-            .moo-sample-icon
+            .moo-sample-icon.burst
                 .moo-ui-badge
                     522
-            .moo-sample-icon.medium
+            .moo-sample-icon.medium.cancel
                 .moo-ui-badge
                     22
-            .moo-sample-icon.medium
+            .moo-sample-icon.medium.checkbox
                 .moo-ui-badge
                     2
-            .moo-sample-icon.small
+            .moo-sample-icon.medium.grid
                 .moo-ui-badge
                     22
-            .moo-sample-icon.small
+            .moo-sample-icon.medium.close
                 .moo-ui-badge
-                    2
+                    3
 
 :javascript    
 
