--- a/_source/css/sass/_mootor.nav.tabs.scss
+++ b/_source/css/sass/_mootor.nav.tabs.scss
@@ -1,36 +1,34 @@
 
-/*
-* Navigation Tabs
-* -----------------------------------------------------------------------------------------
-*/
+// Navigation Tabs
+// -----------------------------------------------------------------------------------------
 
 .moo-nav-tabs-container {
     padding: 2em 0;
 }
-
 .moo-nav-tabs-header {
     height: 5em;
     .moo-tab {
         color: #999;
-        background: #DDD;
-        border: 1px solid #DDD;
+        background-color: #ddd;
+        border: 1px solid #ddd;
         @include border-radius(5px 5px 0 0 );
         display: inline-block;
-        padding: 0.2em 1em;
+        padding: .2em 1em;
         height: 100%;
         &.moo-active {
             color: #333;
-            background-color: #FFF;
-            border-color: #999 #999 #FFF #999; 
+            background-color: #fff;
+            border-color: #999 #999 #fff #999; 
             height: 104%;
         }
     }
 }
-
 .moo-tab-content {
     display: none;
-    background-color: #FFF;
+    background-color: #fff;
     border-top: 1px solid #999;
     overflow: hidden;
-    &.moo-active { display: block;}
+    &.moo-active { 
+        display: block;
+    }
 }
