--- a/_source/css/sass/_mootor.ui.overlay.scss
+++ b/_source/css/sass/_mootor.ui.overlay.scss
@@ -1,15 +1,15 @@
 
 // Overlay controls
+// ---------------------------------------------------------------------------
 
 .moo-overlay {
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,.3);
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     z-index: 500;
-    
     &.moo-hidden {
         display: none;
     }
