Added sprites styles

--- a/_source/css/sass/_mootor.ui.form.scss
+++ b/_source/css/sass/_mootor.ui.form.scss
@@ -196,7 +196,7 @@
             top: 0.5em;
             background-color: #CCC;
             border: 1px solid #999;
-            border-radius: 8px;
+            border-radius: 0.5em;
             width: 1em;
             height: 1em;
             &.moo-active {
