--- a/css/src/styles.scss
+++ b/css/src/styles.scss
@@ -1,5 +1,4 @@
-//! mootor.css - Basic styling for Mootor, a Html5 Javascript for application developement. - (c) 2012 Natalia Petit (natalia.petit@voolks.com)
-
+/*! mootor.css - Basic styling for Mootor, a Html5 Javascript for application developement. - (c) 2012 Natalia Petit (natalia.petit@voolks.com) */
 
 // Compass Imports
 @import "compass/css3";
@@ -17,7 +16,6 @@
 
 @import "sprites";
 @import "sprites-demo";
-
 
 
 // Navigation
