--- a/css/src/_sprites.scss
+++ b/css/src/_sprites.scss
@@ -1,48 +1,42 @@
+// import compass sprite utility
 @import "compass/utilities/sprites/base";
 
-// General Sprite Defaults
-// You can override them before you import this file.
-$emblem-sprite-base-class: ".moo-icons" !default;
-$emblem-sprite-dimensions: false !default;
-$emblem-position: 0% !default;
-$emblem-spacing: 20px !default;
-$emblem-repeat: no-repeat !default;
 
-$emblem-sprites: sprite-map("ui/icons/*.png",
-  $position: $emblem-position,
-  $spacing: $emblem-spacing,
-  $repeat: $emblem-repeat);
+// General Sprite Defaults
+// ----------------------------------------------------------
+$mootor-sprite-base-class: ".moo-icons" !default;
+$mootor-sprite-dimensions: false !default;
+$mootor-position: 0% !default;
+$mootor-spacing: 10px !default;
+$mootor-repeat: no-repeat !default;
+
+$mootor-sprites: sprite-map("ui/icons/*.png",
+  $position: $mootor-position,
+  $spacing: $mootor-spacing,
+  $repeat: $mootor-repeat);
 
 // All sprites should extend this class
 // The emblem-sprite mixin will do so for you.
-#{$emblem-sprite-base-class} {
-  background-image: $emblem-sprites;
+#{$mootor-sprite-base-class} {
+  background-image: $mootor-sprites;
   background-repeat: no-repeat;
 }
 
 // Use this to set the dimensions of an element
 // based on the size of the original image.
-@mixin emblem-sprite-dimensions($name) {
-  @include sprite-dimensions($emblem-sprites, $name)
+@mixin mootor-sprite-dimensions($name) {
+  @include sprite-dimensions($mootor-sprites, $name)
 }
 
 // Move the background position to display the sprite.
-@mixin emblem-sprite-position($name, $offset-x: 0, $offset-y: 0) {
-  @include sprite-position($emblem-sprites, $name, $offset-x, $offset-y)
+@mixin mootor-sprite-position($name, $offset-x: 0, $offset-y: 0) {
+  @include sprite-position($mootor-sprites, $name, $offset-x, $offset-y)
 }
 
 // Extends the sprite base class and set the background position for the desired sprite.
 // It will also apply the image dimensions if $dimensions is true.
-@mixin emblem-sprite($name, $dimensions: $emblem-sprite-dimensions, $offset-x: 0, $offset-y: 0) {
-  @extend #{$emblem-sprite-base-class};
-  @include sprite($emblem-sprites, $name, $dimensions, $offset-x, $offset-y)
+@mixin mootor-sprite($name, $dimensions: $mootor-sprite-dimensions, $offset-x: 0, $offset-y: 0) {
+  @extend #{$mootor-sprite-base-class};
+  @include sprite($mootor-sprites, $name, $dimensions, $offset-x, $offset-y)
 }
 
-@mixin emblem-sprites($sprite-names, $dimensions: $emblem-sprite-dimensions, $prefix: sprite-map-name($emblem-sprites)) {
-  @include sprites($emblem-sprites, $sprite-names, $emblem-sprite-base-class, $dimensions, $prefix)
-}
-
-// Generates a class for each sprited image.
-@mixin all-emblem-sprites($dimensions: $emblem-sprite-dimensions, $prefix: sprite-map-name($emblem-sprites)) {
-  @include emblem-sprites(favorite important photos readonly symbolic-link system unreadable, $dimensions, $prefix);
-}
