Nav, UI improvements
* UI: (get/set values), change background color for Overlay
* Nav: fixes in code comments

--- a/css/default/styles.scss
+++ b/css/default/styles.scss
@@ -15,8 +15,8 @@
 @import "mootor.nav";
 @import "mootor.ui";
 
-@import "sprites";
-@import "sprites-demo";
+//@import "sprites";
+//@import "sprites-demo";
 
 
 // Navigation
