--- a/examples/index.haml
+++ b/examples/index.haml
@@ -2,6 +2,7 @@
 %head
     %title Mootor demo
     %meta{:name=>"viewport", :content=>"width=device-width,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
+    %meta{:name=>"apple-mobile-web-app-capable", :content=>"yes"}
     %link{:href=>"../css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"../js/mootor.min.js",:type=>"text/javascript"}
     %script{:src=>"../js/plugins/nav.min.js",:type=>"text/javascript"}
