Bugfix: class and id added to header

--- a/examples/index.haml
+++ b/examples/index.haml
@@ -9,7 +9,7 @@
     %script{:src=>"../js/plugins/ui.min.js",:type=>"text/javascript"}
 
 %body.main
-    %header
+    %header#moo-header.moo-header
         %h1 Mootor demo
         %nav
             %a.moo-nav-back{:href=>"#moo-nav-back"} Back
