--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /* mootor.css - Basic styling for Mootor, a Html5 Javascript for application developement. - (c) 2012 Natalia Petit (natalia.petit@voolks.com) */
 /* line 23, ../source/css/sass/_normalize.scss */
 article,
@@ -223,54 +222,43 @@ small {
   font-size: 75%;
 }
 
-@media only screen  
-and (max-width: 479px) {
+@media only screen and (max-width: 479px) {
   /* line 74, default/_text.scss */
   body {
     font-size: 0.5em;
   }
 }
-@media only screen 
-and (min-width: 480px) 
-and (max-width: 599px) {
+@media only screen and (min-width: 480px) and (max-width: 599px) {
   /* line 82, default/_text.scss */
   body {
     font-size: 0.65em;
   }
 }
-@media only screen 
-and (min-width: 480px) 
-and (max-width: 599px) and (orientation: landscape) {
+@media only screen and (min-width: 480px) and (max-width: 599px) and (orientation: landscape) {
   /* line 84, default/_text.scss */
   body {
     font-size: 0.5em;
   }
 }
-@media only screen 
-and (min-width: 600px) 
-and (max-width: 767px) {
+@media only screen and (min-width: 600px) and (max-width: 767px) {
   /* line 92, default/_text.scss */
   body {
     font-size: 0.75em;
   }
 }
-@media only screen 
-and (min-width: 600px) 
-and (max-width: 767px) and (orientation: landscape) {
+@media only screen and (min-width: 600px) and (max-width: 767px) and (orientation: landscape) {
   /* line 94, default/_text.scss */
   body {
     font-size: 0.65em;
   }
 }
-@media only screen 
-and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   /* line 102, default/_text.scss */
   body {
     font-size: 0.85em;
   }
 }
-@media only screen 
-and (min-width: 768px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (orientation: landscape) {
   /* line 104, default/_text.scss */
   body {
     font-size: 0.75em;
@@ -291,10 +279,9 @@ body, html {
   max-width: 100%;
   width: 100%;
   max-height: 100%;
-  -webkit-transform: translate3d(0, 0, 0);
 }
 
-/* line 22, ../source/css/sass/_mootor.nav.scss */
+/* line 21, ../source/css/sass/_mootor.nav.scss */
 .moo-header {
   text-align: left;
   z-index: 9999;
@@ -303,14 +290,14 @@ body, html {
   width: 100%;
   padding: .6em 1em;
 }
-/* line 29, ../source/css/sass/_mootor.nav.scss */
+/* line 28, ../source/css/sass/_mootor.nav.scss */
 .moo-header nav {
   position: absolute;
   margin-top: 0;
   top: 1.6em;
   left: 1.5em;
 }
-/* line 35, ../source/css/sass/_mootor.nav.scss */
+/* line 34, ../source/css/sass/_mootor.nav.scss */
 .moo-header nav a {
   padding: .5em 1em;
   width: auto;
@@ -318,7 +305,7 @@ body, html {
   font-size: 1.5em;
 }
 
-/* line 45, ../source/css/sass/_mootor.nav.scss */
+/* line 44, ../source/css/sass/_mootor.nav.scss */
 .moo-panels {
   position: absolute;
   width: 100%;
@@ -330,19 +317,19 @@ body, html {
   background: #f7f7f7;
 }
 
-/* line 55, ../source/css/sass/_mootor.nav.scss */
+/* line 54, ../source/css/sass/_mootor.nav.scss */
 .moo-panel {
   min-height: 100%;
   width: 100%;
   position: absolute;
 }
 
-/* line 65, ../source/css/sass/_mootor.nav.scss */
+/* line 64, ../source/css/sass/_mootor.nav.scss */
 nav ul,
 nav ol {
   list-style: none;
 }
-/* line 69, ../source/css/sass/_mootor.nav.scss */
+/* line 68, ../source/css/sass/_mootor.nav.scss */
 nav a {
   text-decoration: none;
   text-align: left;
@@ -350,7 +337,7 @@ nav a {
   padding: 1em;
 }
 
-/* line 79, ../source/css/sass/_mootor.nav.scss */
+/* line 78, ../source/css/sass/_mootor.nav.scss */
 .moo-panel {
   -webkit-transition-duration: 0;
   -webkit-transform: translate3d(0, 0, 0);
@@ -470,7 +457,8 @@ nav a {
 /* line 62, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-text,
 .moo-ui-select-container-multiple .moo-ui-select-text {
-  line-height: 2em;
+  font-size: 1.5em;
+  line-height: 1.5;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -479,7 +467,7 @@ nav a {
   padding: 0 0.35em;
   width: 90%;
 }
-/* line 71, ../source/css/sass/_mootor.ui.form.scss */
+/* line 72, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-link,
 .moo-ui-select-container-multiple .moo-ui-select-link {
   color: #000;
@@ -494,7 +482,7 @@ nav a {
   right: 0;
   z-index: 10;
 }
-/* line 82, ../source/css/sass/_mootor.ui.form.scss */
+/* line 83, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-link:after,
 .moo-ui-select-container-multiple .moo-ui-select-link:after {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #cccccc));
@@ -517,7 +505,7 @@ nav a {
   height: 2.8em;
   z-index: -1;
 }
-/* line 99, ../source/css/sass/_mootor.ui.form.scss */
+/* line 100, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-menu,
 .moo-ui-select-container-multiple .moo-ui-select-menu {
   background-color: #999;
@@ -528,32 +516,32 @@ nav a {
   width: 99%;
   z-index: 1000;
 }
-/* line 108, ../source/css/sass/_mootor.ui.form.scss */
+/* line 109, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-wrapper,
 .moo-ui-select-container-multiple .moo-ui-select-wrapper {
   overflow: hidden;
   height: 100%;
 }
-/* line 112, ../source/css/sass/_mootor.ui.form.scss */
+/* line 113, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-list,
 .moo-ui-select-container-multiple .moo-ui-select-list {
   font-size: 1.5em;
   background: #FFF;
   border-radius: 5px;
 }
-/* line 116, ../source/css/sass/_mootor.ui.form.scss */
+/* line 117, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-list li,
 .moo-ui-select-container-multiple .moo-ui-select-list li {
   padding: 1em;
   border-bottom: 1px solid #CCC;
   white-space: nowrap;
 }
-/* line 120, ../source/css/sass/_mootor.ui.form.scss */
+/* line 121, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-list li:last-child,
 .moo-ui-select-container-multiple .moo-ui-select-list li:last-child {
   border: none;
 }
-/* line 121, ../source/css/sass/_mootor.ui.form.scss */
+/* line 122, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container .moo-ui-select-list li.selected,
 .moo-ui-select-container-multiple .moo-ui-select-list li.selected {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #daeaec), color-stop(100%, #cee3e6));
@@ -566,36 +554,36 @@ nav a {
   border-bottom-color: #AEBBBD;
   color: #3F8D94;
 }
-/* line 130, ../source/css/sass/_mootor.ui.form.scss */
+/* line 131, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container.moo-bottom .moo-ui-select-menu,
 .moo-ui-select-container-multiple.moo-bottom .moo-ui-select-menu {
   top: 4.5em;
 }
-/* line 132, ../source/css/sass/_mootor.ui.form.scss */
+/* line 133, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container.moo-bottom .moo-ui-select-menu:before,
 .moo-ui-select-container-multiple.moo-bottom .moo-ui-select-menu:before {
-  content: "";
+  content: " ";
   display: block;
   position: absolute;
-  top: -3em;
+  top: -2.9em;
   left: 25%;
   border-top: 15px solid transparent;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   border-bottom: 15px solid #999;
 }
-/* line 146, ../source/css/sass/_mootor.ui.form.scss */
+/* line 147, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container.moo-top .moo-ui-select-menu,
 .moo-ui-select-container-multiple.moo-top .moo-ui-select-menu {
   bottom: 4.5em;
 }
-/* line 148, ../source/css/sass/_mootor.ui.form.scss */
+/* line 149, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-select-container.moo-top .moo-ui-select-menu:after,
 .moo-ui-select-container-multiple.moo-top .moo-ui-select-menu:after {
   content: " ";
   display: block;
   position: absolute;
-  bottom: -3em;
+  bottom: -2.9em;
   left: 25%;
   border-bottom: 1.5em solid transparent;
   border-left: 2em solid transparent;
@@ -606,7 +594,7 @@ nav a {
 /*
 *  Cleanbox is the styling of the icon link used to "clean" a text input
 */
-/* line 165, ../source/css/sass/_mootor.ui.form.scss */
+/* line 166, ../source/css/sass/_mootor.ui.form.scss */
 .cleanbox {
   display: block;
   padding: 0 0.35em;
@@ -620,20 +608,20 @@ nav a {
   text-decoration: none;
 }
 
-/* line 177, ../source/css/sass/_mootor.ui.form.scss */
+/* line 178, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-radio {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 181, ../source/css/sass/_mootor.ui.form.scss */
+/* line 182, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-radio input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 186, ../source/css/sass/_mootor.ui.form.scss */
+/* line 187, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-radio label {
   position: relative;
   display: block;
@@ -641,7 +629,7 @@ nav a {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 192, ../source/css/sass/_mootor.ui.form.scss */
+/* line 193, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-radio label .moo-ui-radio-icon {
   display: block;
   position: absolute;
@@ -653,24 +641,24 @@ nav a {
   width: 1em;
   height: 1em;
 }
-/* line 202, ../source/css/sass/_mootor.ui.form.scss */
+/* line 203, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-radio label .moo-ui-radio-icon.moo-active {
   background-color: #666;
 }
-/* line 204, ../source/css/sass/_mootor.ui.form.scss */
+/* line 205, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-radio label .moo-ui-radio-icon.moo-active:after {
   content: " ";
   display: block;
   position: absolute;
-  top: 0.2em;
-  left: 0.2em;
+  top: 0.14em;
+  left: 0.14em;
   background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 6, color-stop(0%, #ffffff), color-stop(100%, #a6c9fd));
   background: -webkit-radial-gradient(#ffffff, #a6c9fd 6px);
   background: -moz-radial-gradient(#ffffff, #a6c9fd 6px);
   background: -o-radial-gradient(#ffffff, #a6c9fd 6px);
   background: -ms-radial-gradient(#ffffff, #a6c9fd 6px);
   background: radial-gradient(#ffffff, #a6c9fd 6px);
-  border-radius: 4px;
+  border-radius: 0.5em;
   -webkit-box-shadow: 0 0 2px 2px #666666;
   -moz-box-shadow: 0 0 2px 2px #666666;
   box-shadow: 0 0 2px 2px #666666;
@@ -678,20 +666,20 @@ nav a {
   height: 0.6em;
 }
 
-/* line 220, ../source/css/sass/_mootor.ui.form.scss */
+/* line 221, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-checkbox {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 224, ../source/css/sass/_mootor.ui.form.scss */
+/* line 225, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-checkbox input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 229, ../source/css/sass/_mootor.ui.form.scss */
+/* line 230, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-checkbox label {
   position: relative;
   display: block;
@@ -699,7 +687,7 @@ nav a {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 235, ../source/css/sass/_mootor.ui.form.scss */
+/* line 236, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-checkbox label .moo-ui-checkbox-icon {
   display: block;
   position: absolute;
@@ -710,11 +698,11 @@ nav a {
   width: 1em;
   height: 1em;
 }
-/* line 244, ../source/css/sass/_mootor.ui.form.scss */
+/* line 245, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-active {
   background-color: #666;
 }
-/* line 246, ../source/css/sass/_mootor.ui.form.scss */
+/* line 247, ../source/css/sass/_mootor.ui.form.scss */
 .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-active:after {
   content: " ";
   display: block;
@@ -830,7 +818,7 @@ nav a {
 
 /* line 5, ../source/css/sass/_mootor.ui.overlay.scss */
 .moo-overlay {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #f7f7f7;
   position: absolute;
   top: 0;
   left: 0;
