--- a/source/css/sass/_mootor.ui.form.scss
+++ b/source/css/sass/_mootor.ui.form.scss
@@ -60,7 +60,8 @@
     height: 3em;
     z-index: 300;
     .moo-ui-select-text {
-        line-height: 2em;
+        font-size: 1.5em;
+        line-height: 1.5;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
@@ -127,13 +128,13 @@
         }
     }
     &.moo-bottom {
-        .moo-ui-select-menu{
+        .moo-ui-select-menu {
             top:4.5em;
             &:before {
-                content: "";
+                content: " "; 
                 display: block;
                 position: absolute;
-                top: -3em;
+                top: -2.9em;
                 left: 25%;
                 border-top: 15px solid transparent;
                 border-left: 20px solid transparent;
@@ -149,7 +150,7 @@
                 content: " ";
                 display: block;
                 position: absolute;
-                bottom: -3em;
+                bottom: -2.9em;
                 left: 25%;
                 border-bottom: 1.5em solid transparent;
                 border-left: 2em solid transparent;
@@ -205,10 +206,10 @@
                     content: " ";
                     display: block;
                     position: absolute;
-                    top: 0.2em;
-                    left: 0.2em;
+                    top: 0.14em;
+                    left: 0.14em;
                     @include background(radial-gradient(#FFF, #A6C9FD 6px));
-                    border-radius: 4px;
+                    border-radius: 0.5em;
                     @include single-box-shadow(#666, 0, 0, 2px, 2px);
                     width:0.6em;
                     height: 0.6em;
