--- a/source/css/sass/_mootor.ui.form.scss
+++ b/source/css/sass/_mootor.ui.form.scss
@@ -35,7 +35,7 @@
         padding: 1em 2em;
         border-top: 1px solid #CCC;
         &:first-child { border-top: none }
-        > label, legend {
+        > label {
             @include float-left;
             font-size: 2em;
             font-weight: 700;
