Plugins App, UI, example apps: Improvements, bugfixes.
* Data example app
* Style for button in data example app
* Update on UI controls CSS: checkbox, option
* New "Models" module for App plugin
* Bugfixes on UI: constructors update, get/set values

--- a/css/default/styles.scss
+++ b/css/default/styles.scss
@@ -54,9 +54,6 @@ nav a {
     color: $subColor1;
 }
 
-
-
-
 // Clearfix
 
 .clearfix:before,
@@ -68,3 +65,14 @@ nav a {
     clear:both;
 }
 
+// Buttons
+
+.button {
+    font-size: 1.4em;
+    padding: .75em;
+    font-weight: bold;
+}
+
+.moo-ui-form .button {
+    float: right;
+}
