--- a/source/css/sass/_mootor.ui.form.scss
+++ b/source/css/sass/_mootor.ui.form.scss
@@ -200,23 +200,26 @@
             border-radius: 0.5em;
             width: 1em;
             height: 1em;
-            &.moo-active {
-                background-color: #666;
-                &:after {
-                    content: " ";
-                    display: block;
-                    position: absolute;
-                    top: 0.14em;
-                    left: 0.14em;
-                    @include background(radial-gradient(#FFF, #A6C9FD 6px));
-                    border-radius: 0.5em;
-                    @include single-box-shadow(#666, 0, 0, 2px, 2px);
-                    width:0.6em;
-                    height: 0.6em;
-                }
+        }
+    }
+    &.moo-active {
+        .moo-ui-radio-icon {
+            background-color: #666;
+            &:after {
+                content: " ";
+                display: block;
+                position: absolute;
+                top: 0.14em;
+                left: 0.14em;
+                @include background(radial-gradient(#FFF, #A6C9FD 6px));
+                border-radius: 0.5em;
+                @include single-box-shadow(#666, 0, 0, 2px, 2px);
+                width:0.6em;
+                height: 0.6em;
             }
         }
     }
+
 }
 .moo-ui-checkbox {
     @include float-right;
@@ -242,20 +245,23 @@
             border: 1px solid #999;
             width: 1em;
             height: 1em;
-            &.moo-active {
-                background-color: #666;
-                &:after {
-                    content: " ";
-                    display: block;
-                    position: absolute;
-                    top: 0.2em;
-                    left: 0.2em;
-                    @include background(linear-gradient(top, #FFF, #BDD7FD));
-                    @include single-box-shadow(#666, 0, 0, 2px, 2px);
-                    width:0.6em;
-                    height: 0.6em;
-                }
+        }
+    }
+    &.moo-active {
+        .moo-ui-checkbox-icon {
+            background-color: #666;
+            &:after {
+                content: " ";
+                display: block;
+                position: absolute;
+                top: 0.2em;
+                left: 0.2em;
+                @include background(linear-gradient(top, #FFF, #BDD7FD));
+                @include single-box-shadow(#666, 0, 0, 2px, 2px);
+                width:0.6em;
+                height: 0.6em;
             }
         }
     }
+
 }
